--- a/assets/scss/modules/_content.scss
+++ b/assets/scss/modules/_content.scss
@@ -10,9 +10,9 @@
 .main-content {
 
   // default 2 column
-  @include grid-column(12);
+  @include grid-column(10);
   @include breakpoint(medium) {
-    @include grid-column(8);
+    @include grid-column(10);
   }
 
   // 1 column
@@ -29,6 +29,7 @@
       @include grid-col-pos(4);
     }
   }
+  margin-left: 3rem;
 }
 
 .sidebar {
