--- a/assets/scss/global/_wp-overrides.scss
+++ b/assets/scss/global/_wp-overrides.scss
@@ -13,12 +13,14 @@ p.wp-caption-text{
 
 .alignleft {
   float: left;
+  padding-left: 1rem;
   padding-right: 1rem;
   margin: 0;
 }
 
 .alignright {
   float: right;
+  padding-right: 1rem;
   padding-left: 1rem;
   margin: 0;
 }
@@ -28,3 +30,4 @@ p.wp-caption-text{
   margin-left: auto;
   margin-right: auto;
 }
+
